--- a/calculator.css
+++ b/calculator.css
@@ -1,3 +1,6 @@
+
+@import url(http://fonts.googleapis.com/css?family=Stalinist+One);
+
 /* Box Model Hack */
 * {
    -moz-box-sizing: border-box; /* Firexfox */
